# colabfit-portable-models

./: .gitignore  README.md
TorchMLModel1_SW/: CMakeLists.txt  SW_energy_and_forces.pt  file.param
TorchMLModel2_Desc/: CMakeLists.txt  file.param
TorchMLModel3_Graph/: CMakeLists.txt  file.param  model.pt  model_exp.pt
